<resources>
    <string name="app_name">L2ActivitiesAndIntens</string>
    <!-- Title of second activity -->
    <string name="activity2_name">Second Activity</string>

    <!-- Message header text (in second activity) [CHAR LIMIT=30]-->
    <string name="text_header">Message Received</string>

    <!-- Button label in main activity [CHAR LIMIT=10]-->
    <string name="button_main">Send</string>

    <!-- Hint for message edit text in main activity [CHAR LIMIT=30]-->
    <string name="editText_main">Enter Your Message Here</string>

    <!-- Button label in second activity [CHAR LIMIT=10]-->
    <string name="button_second">Reply</string>

    <!-- Hint for reply edit text in second activity [CHAR LIMIT=30]-->
    <string name="editText_second">Enter Your Reply Here</string>

    <!-- Reply header text in main activity [CHAR LIMIT=30]-->
    <string name="text_header_reply">Reply Received</string>

    <string name="edittext_uri">http://developer.android.com</string>
    <string name="button_uri">Open Website</string>

    <string name="edittext_loc">Golden Gate Bridge</string>
    <string name="button_loc">Open Location</string>

    <string name="edittext_share">\'Twas brillig and the slithy toves</string>
    <string name="button_share">Share This Text</string>
</resources>