<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:orientation="vertical"
    tools:context=".ImplicitIntentsActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_website"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edittext_uri"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btn_website"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="openWebsite"
            android:text="@string/button_uri" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edittext_loc"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btn_location"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="openLocation"
            android:text="@string/button_loc" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edt_share"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/edittext_share"
            android:textSize="16sp" />

        <Button
            android:id="@+id/btn_share"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="shareText"
            android:text="@string/button_share" />
    </com.google.android.material.textfield.TextInputLayout>

</LinearLayout>